@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 default_envs = 
-    esp32c3devkit-example-input
-;    lolin32-example-input
+;    esp32c3devkit-example-input
+    lolin32-example-input
 ;    lolin32-example-hello
 ;    nodemcuv2-example-HelloRights
 ;
